--- a/pages/alert/alert.wxml
+++ b/pages/alert/alert.wxml
@@ -38,10 +38,11 @@
 
 
     <view class="flex justify-center">
-        <button class="cu-btn round line-green margin-right" catchtap="toCardDetail" wx:if="{{isHasDiscountCard}}">查看先享进度</button>
+        <button class="cu-btn round line-green margin-right" catchtap="lookCard" 
+        wx:if="{{isHasDiscountCard}}" hidden="{{!userDiscountCard.is_owner}}">查看先享进度</button>
         <button class="cu-btn round text-white bg-yellow"   
             open-type="share"
-        >分享好友福利</button>
+        >分享任务</button>
     </view>
     
             <!-- send-message-title="{{sendMessageTitle}}"
