--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -89,20 +89,20 @@
                             </view>
                             <view style="width:100%;">
                                 <view class="text-bold text-lg flex justify-between align-center "  >
-                                    <text> {{userDiscountCard.name || cardList[0].name}}</text>
+                                    <text> {{userDiscountCard.card_name}}</text>
 
                                     <button class="cu-btn line-gray round"  catchtap="lookCard" 
                     wx:if="{{userDiscountCard.is_owner}}">查看详情</button>
                                 </view>
                                 <view class="margin-top-xs">
                                     <text class="text-red text-bold text-xxl  ">{{userDiscountCard.reward_desc }}</text>   
-                                    <text class="text-gray text-sm margin-left-sm">{{userDiscountCard.desc || cardList[0].desc}}</text>   
+                                    <text class="text-gray text-sm margin-left-sm">{{userDiscountCard.desc }}</text>   
                                 </view>
-                                <!-- <view class="margin-top-xs">
+                                <view class="margin-top-xs">
                                     <view class="cu-tag line-gray round">已享优惠：
-                                    <text class="text-red text-xxl text-bold margin-lr-xs">8</text>
+                                    <text class="text-red text-xxl text-bold margin-lr-xs">{{userDiscountCard.discount_amount }}</text>
                                     元</view>
-                                </view> -->
+                                </view>
                                 <view class="margin-top-xs">
                                     <view class="cu-tag line-gray round ">
                                         优惠次数：仅剩                                    
@@ -110,9 +110,9 @@
                                         次
                                     </view>
                                 </view>
-                                <!-- <view class="margin-top-xs">
+                                <view class="margin-top-xs">
                                     <text class="cu-tag line-gray round">优惠倒计时：{{countdown}}</text>
-                                </view> -->
+                                </view>
                             </view>
                         </view>
                     </view>
