--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -17,9 +17,9 @@
                     <image src="{{store.Logo}}" class="cu-avatar round lg margin-right " mode="widthFix"></image>
                     <text class="text-bold text-lg ">{{store.Name}}</text>
                 </view>
-                <view class="basis-xs  ">
+                <!-- <view class="basis-xs  ">
                     <button class="cu-btn round text-sm " catchtap="toAddress">支付完成页面</button>
-                </view>
+                </view> -->
             </view>        
         </view>
             
@@ -56,7 +56,7 @@
                         </view>
                     </view>
                     <view>
-                        <button class="cu-btn block bg-yellow text-white lg "  catchtap="getCard" data-discount_card_id="{{item.discount_card_id}}">领券</button>
+                        <button class="cu-btn block bg-yellow text-white lg "  catchtap="getCard" data-discount_card_id="{{item.discount_card_id}}">立即参与</button>
                     </view>
                 </view>
             </view>
